[#7] feat: 개인정보 수정 - 관심분야